--- a/Aula1/assets/style.css
+++ b/Aula1/assets/style.css
@@ -1,8 +1,8 @@
 body {
-    background-color: blueviolet;
+    background-color: bisque;
 }
 h1 {
-color: blanchedalmond;
+color: rgb(12, 9, 6);
     font-size: 20px;
 }
 p {
